Merge pull request #86
* Changed Jacoocco version

* Change to JPA 3.1

* Switches to jakarta.validation

* Merge branch 'main' into develop

* column changed to length 36

* pom.xml changed

* Changed Java version to 17

* Elevated Java Version to 17

* Switch to Junit Junyper

* Merge branch 'main' into develop

* Assertj and new Surefire version

* Merge branch 'main' into develop

* changed structure, added new base classes

* merge old main

* corrected merge errors

* corrected merge errors

* added ArchUnit tests

* Merge branch 'main' into develop

* restructured code

* Merge branch 'develop'

* Merge branch 'main' of https://github.com/cpomorska/vicuna-core-lib

* merge from main

* Merge branch 'main' into develop

* Merge remote-tracking branch 'origin/develop' into develop

* merge from main

* merge from main

* new versions in pom.xml

* Merge branch 'main' into develop

* New file .space.kts

* changed entity for spring app

* changed entity for spring app

* refactoring entities

* minor changes in versions, Mann!

* Merge branch 'main' into develop

* develop (#17) (#19)

* Merge branch 'main' into develop

* Update dependencies and enhance README documentation

* Enable automerge and configure merge groups for workflows

* Update GitHub Actions to use latest versions of actions

* Merge branch 'main' into develop

* Configure Renovate to run on weekends only.

* Merge branch 'main' into develop

* Update Renovate config: fix schedule and add wildcard pattern

* Merge branch 'main' into develop

* Fix Renovate schedule configuration for weekends

* Fix schedule syntax in renovate configuration

* Remove CI job and enhance README with structure details

* Merge branch 'main' into develop

* DDD improvements with LLMs

* Removed unused imports and clean up code

* Add domain event infrastructure and user aggregate components, DDD im…

* Merge branch 'main' into develop

* Add domain model for customer management

* Remove User and Customer aggregates